fix(hook): 支持 null 输入快照