@@ -1,5 +1,7 @@
 package cn.lypi.contracts.hook;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -13,22 +15,24 @@ final class ToolHookInputSnapshots {
     static Map<String, Object> snapshot(Map<String, Object> input) {
         Map<String, Object> snapshot = new LinkedHashMap<>();
         input.forEach((key, value) -> snapshot.put(key, snapshotValue(value)));
-        return Map.copyOf(snapshot);
+        return Collections.unmodifiableMap(snapshot);
     }
 
     private static Object snapshotValue(Object value) {
         if (value instanceof Map<?, ?> mapValue) {
             Map<Object, Object> snapshot = new LinkedHashMap<>();
             mapValue.forEach((key, nestedValue) -> snapshot.put(key, snapshotValue(nestedValue)));
-            return Map.copyOf(snapshot);
+            return Collections.unmodifiableMap(snapshot);
         }
         if (value instanceof List<?> listValue) {
-            return List.copyOf(listValue.stream().map(ToolHookInputSnapshots::snapshotValue).toList());
+            List<Object> snapshot = new ArrayList<>(listValue.size());
+            listValue.forEach(item -> snapshot.add(snapshotValue(item)));
+            return Collections.unmodifiableList(snapshot);
         }
         if (value instanceof Set<?> setValue) {
             Set<Object> snapshot = new LinkedHashSet<>();
             setValue.forEach(item -> snapshot.add(snapshotValue(item)));
-            return Set.copyOf(snapshot);
+            return Collections.unmodifiableSet(snapshot);
         }
         return value;
     }
